--- a/package.json
+++ b/package.json
@@ -38,7 +38,11 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "expo-av": "~15.1.7",
-    "expo-speech": "~13.1.7"
+    "expo-speech": "~13.1.7",
+    "expo-audio": "~0.4.8",
+    "expo-file-system": "~18.1.11",
+    "expo-network": "~7.1.5",
+    "@react-native-async-storage/async-storage": "2.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
