--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     "expo-file-system": "~18.1.11",
     "expo-network": "~7.1.5",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "react-native-svg": "^15.9.0"
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
