--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "expo-network": "~7.1.5",
     "@react-native-async-storage/async-storage": "2.1.2",
     "hanzi-writer": "^3.7.0",
-    "react-native-svg": "^15.12.0"
+    "react-native-svg": "15.11.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
